--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,43 @@
 <body>
   <header>
-    <h1> Astro Bookings</h1>
+    <nav>
+      <ul>
+        <li>
+          <strong>🚀 {{ title | uppercase }}</strong>
+        </li>
+      </ul>
+    </nav>
   </header>
 
   <main>
+    <article>
+      <h3> Working with {{getAgenciesLength()}} agencies </h3>
+      <ul>
+        <li *ngFor="let agency of agencies ">
+          <span [class]="agency.status | lowercase">{{agency.name}}</span>
+          <ng-container *ngIf="agency.range==='Interplanetary' then interplanetary; else orbital">
+          </ng-container>
+          <ng-template #interplanetary>⭐</ng-template>
+          <ng-template #orbital>🌍</ng-template>
+
+
+          <!-- <span *ngIf="agency.range==='Interplanetary'">⭐</span>
+          <span *ngIf="agency.range==='Orbital'">🌍</span> -->
+        </li>
+      </ul>
+      <button (click)="reload('agencies')">🎇</button>
+    </article>
+      <aside *ngIf="reloading">🎇 Reloading</aside>
 
   </main>
 
+<!-- <router-outlet></router-outlet> -->
+
   <footer>
-    <p> Astro Bookings</p>
-    <p>Welcome on board</p>
+    <p> 🚀 {{title | uppercase }}</p>
+    <p> {{subtitle}} </p>
+
+    <a [href]="authorURL"> {{author}}</a>
   </footer>
 
 </body>
-<!-- <router-outlet></router-outlet> -->
