--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,6 @@
           </ng-container>
           <ng-template #interplanetary>⭐</ng-template>
           <ng-template #orbital>🌍</ng-template>
-
-
           <!-- <span *ngIf="agency.range==='Interplanetary'">⭐</span>
           <span *ngIf="agency.range==='Orbital'">🌍</span> -->
         </li>
@@ -28,6 +26,23 @@
       <button (click)="reload('agencies')">🎇</button>
     </article>
       <aside *ngIf="reloading">🎇 Reloading</aside>
+
+<!-- traballando con viaxes -->
+<article>
+  <h3> Number of trips: {{ getTripsLength() }}</h3>
+  <ul>
+    <li *ngFor="let trip of trips">
+      <span [ngClass]="getClassForStatus(trip.status)">{{ trip.destination }}</span>
+      <ng-container *ngIf="trip.kind === 'WithStay' then withstay; else triponly">
+      </ng-container>
+      <ng-template #withstay> 🛏 </ng-template>
+      <ng-template #triponly> 🛩 </ng-template>
+    </li>
+  </ul>
+  <button (click)="reload('trips')"> ♻ </button>
+</article>
+        <aside *ngIf="reloading">🎇 Reloading</aside>
+
 
   </main>
 
