--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
     <li>
-      <strong>🚀 {{ title | uppercase }}</strong>
+      <app-title></app-title>
     </li>
   </ul>
 </nav>
