--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,4 +29,4 @@
 </ul>
 <button (click)="reload('trips')"> ♻ </button>
 </article>
-    <aside *ngIf="reloading">🎇 Reloading</aside>
+    <app-reloading *ngIf="reloading"></app-reloading>
