feat: last changes

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,9 +5,8 @@
     </li>
   </ul>
   <ul>
-    <li routerLink="/about"> ℹ About</li>
+    <li><a routerLink="/about"> ℹ About </a></li>
+    <li><a routerLink="/contact"> 📧 Contact </a></li>
   </ul>
-  <ul>
-    <li routerLink="/contact"> 📓 Contact</li>
-  </ul>
+
 </nav>
