subimos antes de traballar co agency/:id

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -2,3 +2,16 @@
     <p> {{subtitle}} </p>
 
     <a [href]="authorURL"> {{author}}</a>
+
+    <nav>
+      <ul>
+        <li>
+          <app-title></app-title>
+        </li>
+      </ul>
+      <ul>
+        <li><a routerLink="/about"> ℹ About </a></li>
+        <li><a routerLink="/contact"> 📧 Contact </a></li>
+      </ul>
+
+    </nav>
