--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-<article>
+<!-- <article>
   <h3> Working with {{getAgenciesLength()}} agencies </h3>
   <ul>
     <li *ngFor="let agency of agencies ">
@@ -7,16 +7,18 @@
       </ng-container>
       <ng-template #interplanetary>⭐</ng-template>
       <ng-template #orbital>🌍</ng-template>
-      <!-- <span *ngIf="agency.range==='Interplanetary'">⭐</span>
-      <span *ngIf="agency.range==='Orbital'">🌍</span> -->
+       <span *ngIf="agency.range==='Interplanetary'">⭐</span>
+      <span *ngIf="agency.range==='Orbital'">🌍</span>
     </li>
   </ul>
   <button (click)="reload('agencies')">🎇</button>
-</article>
+</article> -->
+<app-agencies-list></app-agencies-list>
+<app-trips-list></app-trips-list>
   <aside *ngIf="reloading">🎇 Reloading</aside>
 
 <!-- traballando con viaxes -->
-<article>
+<!-- <article>
 <h3> Number of trips: {{ getTripsLength() }}</h3>
 <ul>
 <li *ngFor="let trip of trips">
@@ -28,5 +30,5 @@
 </li>
 </ul>
 <button (click)="reload('trips')"> ♻ </button>
-</article>
+</article> -->
     <app-reloading *ngIf="reloading"></app-reloading>
