--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,8 +5,10 @@
     </li>
   </ul>
   <ul>
-    <li><a routerLink="/about"> ℹ About </a></li>
-    <li><a routerLink="/contact"> 📧 Contact </a></li>
+    <li><a routerLink="agencies"> 👮‍♀️ Register </a></li>
+    <li><a routerLink="trips"> 👮‍♀️ TRIPS </a></li>
+    <li><a routerLink="auth/register"> 🔐 Register </a></li>
+    <li><a routerLink="auth/login"> 🔐 Login </a></li>
   </ul>
 
 </nav>
