fin tarea router

--- a/src/app/shared/components/agencies/agencies.list.html
+++ b/src/app/shared/components/agencies/agencies.list.html
@@ -2,7 +2,8 @@
   <h3> Working with {{getAgenciesLength()}} agencies </h3>
   <ul>
     <li *ngFor="let agency of agencies ">
-      <span [class]="agency.status | lowercase">{{agency.name}}</span>
+      <a [routerLink]="['/','agencies','agency', agency.id ]"
+         [ngClass]="agency.status | lowercase">{{ agency.name }}</a>
       <ng-container *ngIf="agency.range==='Interplanetary' then interplanetary; else orbital">
       </ng-container>
       <ng-template #interplanetary>⭐</ng-template>
