--- a/src/app/trips/trip/trip.page.html
+++ b/src/app/trips/trip/trip.page.html
@@ -1,6 +1,6 @@
 <article>
   <header>
-      <strong>{{agencyId}}</strong>
+      <strong>{{tripId}}</strong>
   </header>
   <p>Details are a work in progress...</p>
 </article>
