--- a/src/app/shared/components/trips/trips.list.html
+++ b/src/app/shared/components/trips/trips.list.html
@@ -2,7 +2,9 @@
   <h3> Number of trips: {{ getTripsLength() }}</h3>
   <ul>
   <li *ngFor="let trip of trips">
-    <span [ngClass]="getClassForStatus(trip.status)">{{ trip.destination }}</span>
+
+    <a [routerLink]="['/','trips','trip', trip.id ]"
+    [ngClass]="getClassForStatus(trip.status)">{{ trip.destination  }}</a>
     <ng-container *ngIf="trip.kind === 'WithStay' then withstay; else triponly">
     </ng-container>
     <ng-template #withstay> 🛏 </ng-template>
