--- a/src/app/trips/trips.page.html
+++ b/src/app/trips/trips.page.html
@@ -1,13 +1,1 @@
-<article>
-  <h3> Number of trips: {{ getTripsLength() }}</h3>
-  <ul>
-  <li *ngFor="let trip of trips">
-    <span [ngClass]="getClassForStatus(trip.status)">{{ trip.destination }}</span>
-    <ng-container *ngIf="trip.kind === 'WithStay' then withstay; else triponly">
-    </ng-container>
-    <ng-template #withstay> 🛏 </ng-template>
-    <ng-template #triponly> 🛩 </ng-template>
-  </li>
-  </ul>
-  <button (click)="reload('trips')"> ♻ </button>
-  </article>
+<app-trips-list></app-trips-list>
