feat: contact name minimal

--- a/src/app/contact/contact.form.html
+++ b/src/app/contact/contact.form.html
@@ -1,10 +1,12 @@
-<form>
+<form [formGroup]="form">
   <div>
-    <label for="name">Name</label>
+    <label for="name">Name</label><small *ngIf="form.get('name')?.invalid">⭕</small>
     <input type="text"
            id="name"
            name="name"
+           formControlName="name"
            placeholder="Your name">
+      <small *ngIf="form.get('name')?.invalid && form.get('name')?.touched" >🔥 Field is required</small>
   </div>
-  <button>Save</button>
+  <button [disabled]="form.invalid" (click)="onSave()">Save</button>
 </form>
