--- a/src/app/auth/register/register.form.html
+++ b/src/app/auth/register/register.form.html
@@ -36,8 +36,9 @@
            name="confirmPassword"
            formControlName="confirmPassword"
            placeholder="Confirm password"
-           [attr.aria.invalid]="hasError('password')">
-      <small *ngIf="mustShowMessage('password')" > {{getErrorMessage('password')}}</small>
+           [attr.aria.invalid]="hasError('confirmPassword')">
+      <small *ngIf="mustShowMessage('confirmPassword')" > {{getErrorMessage('confirmPassword')}}</small>
+      <small> {{getPasswordMatchMessage()}}</small>
   </div>
   <div>
 
@@ -48,8 +49,9 @@
            [attr.aria.invalid]="hasError('email')">
     <label for="acceptTerms">Accept Terms</label>
       <small *ngIf="mustShowMessage('email')" > {{getErrorMessage('email')}}</small>
+
   </div>
 
-
+  <pre>{{form.errors | json}}</pre>
   <button [disabled]="form.invalid" (click)="onSave()">Save</button>
 </form>
