--- a/src/app/auth/register/register.form.html
+++ b/src/app/auth/register/register.form.html
@@ -6,7 +6,7 @@
            name="name"
            formControlName="name"
            placeholder="Your name"
-           [attr.aria.invalid]="hasError('name')">
+           [attr.aria-invalid]="hasError('name')">
       <small *ngIf="mustShowMessage('name')" > {{getErrorMessage('name')}}</small>
   </div>
   <div>
@@ -16,7 +16,7 @@
            name="email"
            formControlName="email"
            placeholder="Your email"
-           [attr.aria.invalid]="hasError('email')">
+           [attr.aria-invalid]="hasError('email')">
       <small *ngIf="mustShowMessage('email')" > {{getErrorMessage('email')}}</small>
   </div>
   <div>
@@ -26,7 +26,7 @@
            name="password"
            formControlName="password"
            placeholder="Your password"
-           [attr.aria.invalid]="hasError('password')">
+           [attr.aria-invalid]="hasError('password')">
       <small *ngIf="mustShowMessage('password')" > {{getErrorMessage('password')}}</small>
   </div>
   <div>
@@ -36,7 +36,7 @@
            name="confirmPassword"
            formControlName="confirmPassword"
            placeholder="Confirm password"
-           [attr.aria.invalid]="hasError('confirmPassword')">
+           [attr.aria-invalid]="hasError('confirmPassword')">
       <small *ngIf="mustShowMessage('confirmPassword')" > {{getErrorMessage('confirmPassword')}}</small>
       <small> {{getPasswordMatchMessage()}}</small>
   </div>
