--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,7 +5,7 @@
     </li>
   </ul>
   <ul>
-    <li><a routerLink="agencies"> 👮‍♀️ Register </a></li>
+    <li><a routerLink="agencies"> 👮‍♀️ AGENCIAS </a></li>
     <li><a routerLink="trips"> 👮‍♀️ TRIPS </a></li>
     <li><a routerLink="auth/register"> 🔐 Register </a></li>
     <li><a routerLink="auth/login"> 🔐 Login </a></li>
