--- a/src/app/shared/components/agencies/agencies.list.html
+++ b/src/app/shared/components/agencies/agencies.list.html
@@ -12,5 +12,5 @@
       <span *ngIf="agency.range==='Orbital'">🌍</span> -->
     </li>
   </ul>
-  <button (click)="reload('agencies')">🎇</button>
+  <button (click)="onReloadClick('agencies')">🎇</button>
 </article>
