feat: success changes

--- a/src/app/agencies/new-agency/new-agency.page.html
+++ b/src/app/agencies/new-agency/new-agency.page.html
@@ -1,1 +1,4 @@
-<app-new-agency-form></app-new-agency-form>
+<app-new-agency-form [ranges]="ranges"
+                      [statuses]="statuses"
+                      (save)="onSave($event)"
+                     ></app-new-agency-form>
