--- a/src/app/shared/components/trips/trips.list.html
+++ b/src/app/shared/components/trips/trips.list.html
@@ -11,5 +11,5 @@
     <ng-template #triponly> 🛩 </ng-template>
   </li>
   </ul>
-  <button (click)="reload('trips')"> ♻ </button>
+  <button (click)="onReloadClick('trips')"> ♻ </button>
   </article>
