--- a/src/app/agencies/agencies.page.html
+++ b/src/app/agencies/agencies.page.html
@@ -1,2 +1,9 @@
 <a role="button" routerLink="agency/new">Add a new Agency</a>
-<app-agencies-list [agencies]="agencies" (reload)="onReload()"></app-agencies-list>
+<!-- <app-agencies-list *ngIf="agencies ; else waiting" [agencies]="agencies" (reload)="onReload()"></app-agencies-list> -->
+
+<app-agencies-list *ngIf="(agencies$ | async) as agencies ; else waiting"
+                  [agencies]="agencies"
+                  (reload)="onReload()"></app-agencies-list>
+
+<ng-template #waiting><h4>Waiting...</h4></ng-template>
+<h4 *ngIf="error">Ha habido un error...</h4>
