feat: trips an angency pages

--- a/src/app/trips/new-trip/new-trip.page.html
+++ b/src/app/trips/new-trip/new-trip.page.html
@@ -1,2 +1,4 @@
-<app-new-trip-form  [agencies]="agencies"
+<app-new-trip-form
+                  *ngIf="(agencies$ | async) as agencies"
+                    [agencies]="agencies"
                     (save)="onSave($event)"></app-new-trip-form>
