--- a/src/app/trips/trips.page.html
+++ b/src/app/trips/trips.page.html
@@ -1,3 +1,7 @@
 <a role="button" routerLink="trip/new">➕ Add a new Trip</a>
-<app-trips-list   [trips]="trips"
+<app-trips-list
+                  *ngIf="(trips$ | async) as trips ; else waiting"
+                  [trips]="trips"
                   (reload)="onReload()"></app-trips-list>
+<ng-template #waiting><h4>Waiting...</h4></ng-template>
+<h4 *ngIf="error">Ha habido un error...</h4>
