--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,3 +1,8 @@
+<!-- <ng-container *ngIf="(agencies$ |async)  as agencies ;else waiting"
+                      [agencies]="agencies"
+                        ></ng-container> -->
+
+
 
 <app-agencies-list [agencies]="agencies"></app-agencies-list>
 <app-trips-list [trips]="trips"></app-trips-list>
