feat: router bookings

--- a/src/app/bookings/booking/booking.view.html
+++ b/src/app/bookings/booking/booking.view.html
@@ -1,1 +1,6 @@
-<p>booking works!</p>
+<article>
+  <header>
+    <strong>{{bookingId}}</strong>
+  </header>
+  <pre>{{booking | json }}</pre>
+</article>
