feat: end practice bookings

--- a/src/app/bookings/booking/booking.page.html
+++ b/src/app/bookings/booking/booking.page.html
@@ -1,2 +1,4 @@
+<app-booking-view [bookingId]="bookingId"
+*ngIf="(booking$ | async) as booking" [booking]="booking">
 
-<app-booking-view></app-booking-view>
+</app-booking-view>
