--- a/src/app/bookings/new-booking/new-booking.form.html
+++ b/src/app/bookings/new-booking/new-booking.form.html
@@ -1,1 +1,64 @@
-<p>new-booking works!</p>
+<form [formGroup]="form">
+  <fieldset>
+    <div>
+      <label for="tripId"> Trip Id </label>
+      <select name="tripId"
+              id="tripId"
+              formControlName="tripId"
+              [attr.aria-invalid]="hasError('tripId')">
+        <option selected
+                value="">Select a trip id</option>
+        <option *ngFor="let trip of trips"
+                [value]="trip.id">
+          {{ trip.id }}
+        </option>
+      </select>
+      <small *ngIf="mustShowMessage('range')">{{ getErrorMessage('range') }}</small>
+    </div>
+    <div>
+      <label for="passengerName"> Passenger Name </label>
+      <input name="passengerName"
+             id="passengerName"
+             type="text"
+             formControlName="passengerName"
+             [attr.aria-invalid]="hasError('passengerName')">
+      <small *ngIf="mustShowMessage('passengerName')">{{ getErrorMessage('passengerName') }}</small>
+    </div>
+    <div>
+      <label for="date"> Date </label>
+      <input name="date"
+             id="date"
+             type="date"
+             formControlName="date"
+             [attr.aria-invalid]="hasError('date')">
+      <small *ngIf="mustShowMessage('date')">{{ getErrorMessage('date') }}</small>
+    </div>
+    <div>
+      <label for="luggageKilos"> Luggage kilos </label>
+      <input name="luggageKilos"
+             id="luggageKilos"
+             type="number"
+             formControlName="luggageKilos"
+             [attr.aria-invalid]="hasError('luggageKilos')">
+      <small *ngIf="mustShowMessage('luggageKilos')">{{ getErrorMessage('luggageKilos') }}</small>
+    </div>
+    <div>
+      <input
+        type="checkbox"
+        id="hasPremiumFoodPrice"
+        name="hasPremiumFoodPrice"
+        formControlName="hasPremiumFoodPrice"
+        (change)="hasPremiumFood = !hasPremiumFood"
+
+        />
+      <label for="hasPremiumFood">Do you want premium food?</label>
+    </div>
+
+
+  </fieldset>
+  <div>
+    <button type="submit"
+            (click)="onSubmitClick()"
+            [disabled]="form.invalid"> Send new agency data </button>
+  </div>
+</form>
