--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -1,2 +1,5 @@
 <a role="button" routerLink="booking/new"> NEW BOOKING </a>
-<app-bookings-list></app-bookings-list>
+<app-bookings-list *ngIf="( bookings$ | async ) as bookings"
+                  [bookings]="bookings"
+                (reload)="onReload()"
+                ></app-bookings-list>
