--- a/src/app/auth/login/login.form.html
+++ b/src/app/auth/login/login.form.html
@@ -1,14 +1,5 @@
 <form [formGroup]="form">
-  <div>
-    <label for="email">Email Address</label>
-    <input type="email"
-           id="email"
-           name="email"
-           formControlName="email"
-           placeholder="Your email"
-           [attr.aria-invalid]="hasError('email')">
-      <small *ngIf="mustShowMessage('email')" > {{getErrorMessage('email')}}</small>
-  </div>
+  <app-email-control formControlName="email"></app-email-control>
   <div>
     <label for="password">Email password</label>
     <input type="password"
