--- a/src/app/contact/contact.form.html
+++ b/src/app/contact/contact.form.html
@@ -9,16 +9,7 @@
            [attr.aria.invalid]="hasError('name')">
       <small *ngIf="mustShowMessage('name')" > {{getErrorMessage('name')}}</small>
   </div>
-  <div>
-    <label for="email">Email Address</label>
-    <input type="email"
-           id="email"
-           name="email"
-           formControlName="email"
-           placeholder="Your email"
-           [attr.aria.invalid]="hasError('email')">
-      <small *ngIf="mustShowMessage('email')" > {{getErrorMessage('email')}}</small>
-  </div>
+  <app-email-control formControlName="email"></app-email-control>
   <div>
     <label for="message">Message</label>
     <input type="text"
