--- a/src/app/agencies/new-agency/new-agency.form.html
+++ b/src/app/agencies/new-agency/new-agency.form.html
@@ -9,6 +9,10 @@
              [attr.aria-invalid]="hasError('name')">
       <small *ngIf="mustShowMessage('name')">{{ getErrorMessage('name') }}</small>
     </div>
+    <app-template-control [form]="form"
+                        formControlName="name"
+                        label="Agency name"
+                        placeholder="Your Agency name"></app-template-control>
     <div>
       <label for="range"> Operation range </label>
       <select name="range"
