--- a/src/app/bookings/new-booking/new-booking.form.html
+++ b/src/app/bookings/new-booking/new-booking.form.html
@@ -15,44 +15,18 @@
       </select>
       <small *ngIf="mustShowMessage('range')">{{ getErrorMessage('range') }}</small>
     </div>
-    <div>
-      <label for="passengerName"> Passenger Name </label>
-      <input name="passengerName"
-             id="passengerName"
-             type="text"
-             formControlName="passengerName"
-             [attr.aria-invalid]="hasError('passengerName')">
-      <small *ngIf="mustShowMessage('passengerName')">{{ getErrorMessage('passengerName') }}</small>
-    </div>
-    <div>
-      <label for="date"> Date </label>
-      <input name="date"
-             id="date"
-             type="date"
-             formControlName="date"
-             [attr.aria-invalid]="hasError('date')">
-      <small *ngIf="mustShowMessage('date')">{{ getErrorMessage('date') }}</small>
-    </div>
-    <div>
-      <label for="luggageKilos"> Luggage kilos </label>
-      <input name="luggageKilos"
-             id="luggageKilos"
-             type="number"
-             formControlName="luggageKilos"
-             [attr.aria-invalid]="hasError('luggageKilos')">
-      <small *ngIf="mustShowMessage('luggageKilos')">{{ getErrorMessage('luggageKilos') }}</small>
-    </div>
-    <div>
-      <input
-        type="checkbox"
-        id="hasPremiumFood"
-        name="hasPremiumFood"
-        formControlName="hasPremiumFood"
 
-        />
-      <label for="hasPremiumFood">Do you want premium food?</label>
-    </div>
+    <app-template-control [form]="form" formControlName="passengerName"
+  label="Passenger Name" placeHolder="Your passenger Name" inputType="text"> </app-template-control>
 
+  <app-template-control [form]="form" formControlName="date"
+  label="Date" placeHolder="" inputType="date"> </app-template-control>
+
+  <app-template-control [form]="form" formControlName="luggageKilos"
+  label="Kg" placeHolder="" inputType="number"> </app-template-control>
+
+  <app-template-control [form]="form" formControlName="hasPremiumFoodPrice"
+  label="Premium Food" placeHolder="" inputType="checkbox"> </app-template-control>
 
   </fieldset>
   <div>
