--- a/src/app/contact/contact.form.html
+++ b/src/app/contact/contact.form.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form">
-  <div>
+  <!-- <div>
     <label for="name">Name</label>
     <input type="text"
            id="name"
@@ -8,7 +8,7 @@
            placeholder="Your name"
            [attr.aria.invalid]="hasError('name')">
       <small *ngIf="mustShowMessage('name')" > {{getErrorMessage('name')}}</small>
-  </div>
+  </div> -->
   <app-template-control [form]="form"
                         formControlName="name"
                         label="Name"
