--- a/src/app/agencies/agencies.page.html
+++ b/src/app/agencies/agencies.page.html
@@ -1,7 +1,7 @@
 <a role="button" routerLink="agency/new">Add a new Agency</a>
 <!-- <app-agencies-list *ngIf="agencies ; else waiting" [agencies]="agencies" (reload)="onReload()"></app-agencies-list> -->
 
- <app-search-page></app-search-page>
+ <app-search-page (search)="onSearch($event)"></app-search-page>
 
 <app-agencies-list *ngIf="(agencies$ | async) as agencies ; else waiting"
                   [agencies]="agencies"
