--- a/src/app/shared/controls/search/search.control.html
+++ b/src/app/shared/controls/search/search.control.html
@@ -1,4 +1,5 @@
 <form>
   <label >Search: </label>
-  <input #searchInput type="search">
+  <input #searchInput type="search" >
 </form>
+<!-- <pre>{{searchInput$ | async }}</pre> -->
