--- a/src/app/agencies/agencies.page.html
+++ b/src/app/agencies/agencies.page.html
@@ -1,11 +1,18 @@
 <a role="button" routerLink="agency/new">Add a new Agency</a>
 <!-- <app-agencies-list *ngIf="agencies ; else waiting" [agencies]="agencies" (reload)="onReload()"></app-agencies-list> -->
 
- <app-search-page (search)="(onSearch($event))"></app-search-page>
+<app-search-page (search)="(onSearch($event))"></app-search-page>
 
-<app-agencies-list *ngIf="(agencies$ | async) as agencies ; else waiting"
-                  [agencies]="agencies"
-                  (reload)="onReload()"></app-agencies-list>
+<app-agencies-list
+  *ngIf="(agencies$ | async) as agencies ; else waiting"
+  [agencies]="agencies"
+  (reload)="onReload()"
+></app-agencies-list>
+
+<app-trips-list
+  *ngIf="(trips$ |async)as trips"
+  [trips]="trips"
+></app-trips-list>
 
 <ng-template #waiting><h4>Waiting...</h4></ng-template>
 <h4 *ngIf="error">Ha habido un error...</h4>
