--- a/src/app/shared/components/agencies/agencies.list.html
+++ b/src/app/shared/components/agencies/agencies.list.html
@@ -2,6 +2,8 @@
   <h3> Working with {{getAgenciesLength()}} agencies </h3>
   <ul>
     <li *ngFor="let agency of agencies ">
+      <a [routerLink]="['.']" [queryParams]="{ q: agency.id }" queryParamsHandling="merge"> 🚀 </a>
+      <button (click)="onSearchClick(agency.id)">📡 </button>
       <a [routerLink]="['/','agencies','agency', agency.id ]"
          [ngClass]="agency.status | lowercase">{{ agency.name }}</a>
       <ng-container *ngIf="agency.range==='Interplanetary' then interplanetary; else orbital">
